<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:overScrollMode="ifContentScrolls">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivIconToolbar"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_48"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_4"
                android:importantForAccessibility="no"
                android:src="@drawable/marvel_black_logo_transparent_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSearchToolbar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_48"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_4"
                android:hint="@string/marvel_character"
                app:endIconDrawable="@drawable/ic_search_mvl"
                app:endIconMode="custom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivIconToolbar"
                app:layout_constraintTop_toTopOf="@id/ivIconToolbar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieSearchToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/padding_8"
                    android:singleLine="true"
                    android:textSize="@dimen/font_16" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/vDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressCircular"
            android:layout_width="@dimen/width_72"
            android:layout_height="@dimen/height_72"
            android:layout_marginTop="@dimen/margin_72"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_16"
            android:gravity="center"
            android:text="@string/error_message_empty_search"
            android:textColor="?attr/colorError"
            android:textStyle="normal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clToolbar"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clToolbar"
            tools:visibility="gone">

            <TextView
                android:id="@+id/tvCharacter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16"
                android:padding="@dimen/padding_4"
                android:text="@string/character"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="@dimen/font_24"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/containerCardCharacterProfile"
                layout="@layout/card_character_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/tvComics"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCharacter" />

            <TextView
                android:id="@+id/tvComics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16"
                android:padding="@dimen/padding_4"
                android:text="@string/comics"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="@dimen/font_24"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/containerCardCharacterProfile" />

            <include
                android:id="@+id/containerCarouselComics"
                layout="@layout/carousel_card_view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvComics" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>