<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:overScrollMode="ifContentScrolls">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clToolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivIconToolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:importantForAccessibility="no"
                    android:src="@drawable/marvel_black_logo_transparent_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilSearchToolbar"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_4"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:hint="@string/marvel_character"
                    app:endIconDrawable="@drawable/ic_search_mvl"
                    app:endIconMode="custom"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivIconToolbar"
                    app:layout_constraintTop_toTopOf="@id/ivIconToolbar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieSearchToolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionSearch"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/padding_4"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clContent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clToolbar"
                tools:visibility="visible">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvCharacterProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    app:cardCornerRadius="@dimen/radius_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivCharacterImage"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginStart="@dimen/margin_32"
                            android:layout_marginTop="@dimen/margin_16"
                            android:layout_marginEnd="@dimen/margin_32"
                            android:contentDescription="@string/app_name"
                            android:scaleType="fitCenter"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvCharacterName"
                            app:srcCompat="@drawable/ic_launcher_background" />

                        <TextView
                            android:id="@+id/tvCharacterName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_4"
                            android:padding="@dimen/padding_4"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/title" />

                        <TextView
                            android:id="@+id/tvDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_8"
                            android:layout_marginTop="@dimen/margin_16"
                            android:layout_marginEnd="@dimen/margin_8"
                            android:layout_marginBottom="16dp"
                            android:text="@string/app_name"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ivCharacterImage" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/tvComics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:padding="@dimen/padding_4"
                    android:text="@string/comics"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cvCharacterProfile" />

                <com.github.islamkhsh.CardSliderViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_marginTop="@dimen/margin_4"
                    app:cardSlider_indicator="@id/indicator"
                    app:cardSlider_otherPagesWidth="@dimen/margin_40"
                    app:cardSlider_pageMargin="12dp"
                    app:cardSlider_smallScaleFactor="0.9"
                    app:cardSlider_smallAlphaFactor="0.7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvComics" />

                <com.github.islamkhsh.CardSliderIndicator
                    android:id="@+id/indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_16"
                    app:indicatorsToShow="-1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewPager" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressCircular"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

<!--<TextView-->
<!--android:id="@+id/tvErrorMessage"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:padding="@dimen/padding_4"-->
<!--android:layout_margin="@dimen/margin_16"-->
<!--android:textSize="@dimen/font_18"-->
<!--android:text="Não foi possiveel"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintEnd_toEndOf="parent"-->
<!--app:layout_constraintTop_toTopOf="parent"-->
<!--app:layout_constraintBottom_toBottomOf="parent"/>-->